Attempt To Fix Dropdown Bug On Mobile Browsers

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -186,7 +186,7 @@ li {
   -moz-box-shadow: 0px 0px 50px 0px rgba(0, 100, 255, 0.25);
   box-shadow: 0px 0px 50px 0px rgba(0, 100, 255, 0.25); }
 
-.dropdown-wrapper .dropdown-button.dropdown-toggle {
+.dropdown-wrapper .dropdown-button {
   background: #ffffff;
   background: -moz-linear-gradient(-45deg, #ffffff 13%, #b5ddff 47%, #82f2ff 53%, #ffffff 92%);
   background: -webkit-linear-gradient(-45deg, #ffffff 13%, #b5ddff 47%, #82f2ff 53%, #ffffff 92%);
@@ -248,6 +248,10 @@ li {
       -moz-transform: translate3d(865px, 0, 0);
       -ms-transform: translate3d(865px, 0, 0);
       -o-transform: translate3d(865px, 0, 0);
-      transform: translate3d(865px, 0, 0); } }
+      transform: translate3d(865px, 0, 0); }
+
+  .dropdown-wrapper .dropdown-menu {
+    width: 500px;
+    min-height: 100px; } }
 
 /*# sourceMappingURL=main.css.map */
