--- a/assets/scss/sections/_responsive.scss
+++ b/assets/scss/sections/_responsive.scss
@@ -75,9 +75,16 @@
 		}		
 	}
 
+	.dropdown-wrapper {
 
+		.dropdown-button.needsclick {
+		}
 
-
+		.dropdown-menu {
+			width: 500px;
+			min-height: 100px;
+		}	
+	}
 }
 
 
